# 5-5-go-game

./: README  build.sh  input.txt  my_player.py
KataGoLike/cpp/: CMakeLists.txt  GTPengine.cpp  constant.h  get_input.cpp  human.cpp  selfplay.cpp  test.cpp
KataGoLike/cpp/AI/: AI.h  ExhaustiveTree.cpp  ExhaustiveTree.h  MCTSAI.cpp  MCTSAI.h  RandomAI.cpp  RandomAI.h
KataGoLike/cpp/GoGame/: GoGame.cpp  GoGame.h
KataGoLike/cpp/Model/: NeuralNetworkInferenceEngine.hpp  ONNXEngine.cpp  ONNXEngine.h
KataGoLike/cpp/utils/: BoardMap.hpp  FIFOCache.hpp
KataGoLike/python/: d2lLike.py  hdf5test.ipynb  model.onnx  model2.onnx  model3.onnx  model4.onnx  model5.onnx  model6.onnx  model7.onnx  model8.onnx  model9_1.onnx  net.py  test.ipynb
data/: model9.onnx
